# serializer version: 1
# name: TestNEORegressionEdgeCases.test_closest_approach_identified
  dict({
    'closest_approach': dict({
      'absolute_magnitude': None,
      'close_approach_date': '2024-03-01',
      'estimated_diameter_max_km': None,
      'estimated_diameter_min_km': None,
      'is_potentially_hazardous': False,
      'miss_distance_km': 500000.0,
      'name': 'Close One',
      'neo_id': '55555',
      'orbiting_body': 'Earth',
      'relative_velocity_kph': None,
    }),
    'date_range': '2024-03-01 to 2024-03-02',
    'hazardous_count': 0,
    'near_earth_objects': list([
      dict({
        'absolute_magnitude': None,
        'close_approach_date': '2024-03-01',
        'estimated_diameter_max_km': None,
        'estimated_diameter_min_km': None,
        'is_potentially_hazardous': False,
        'miss_distance_km': 10000000.0,
        'name': 'Far Away',
        'neo_id': '44444',
        'orbiting_body': 'Earth',
        'relative_velocity_kph': None,
      }),
      dict({
        'absolute_magnitude': None,
        'close_approach_date': '2024-03-01',
        'estimated_diameter_max_km': None,
        'estimated_diameter_min_km': None,
        'is_potentially_hazardous': False,
        'miss_distance_km': 500000.0,
        'name': 'Close One',
        'neo_id': '55555',
        'orbiting_body': 'Earth',
        'relative_velocity_kph': None,
      }),
      dict({
        'absolute_magnitude': None,
        'close_approach_date': '2024-03-02',
        'estimated_diameter_max_km': None,
        'estimated_diameter_min_km': None,
        'is_potentially_hazardous': False,
        'miss_distance_km': 3000000.0,
        'name': 'Medium Distance',
        'neo_id': '66666',
        'orbiting_body': 'Earth',
        'relative_velocity_kph': None,
      }),
    ]),
    'objects_count': 3,
    'query': 'What is the closest asteroid approach?',
    'risk_assessment': 'Normal activity levels. No potentially hazardous asteroids detected in the specified date range.',
    'risk_level': 'normal',
    'type': 'NEO_REPORT',
  })
# ---
# name: TestNEORegressionEdgeCases.test_hazardous_asteroids_elevate_risk
  dict({
    'closest_approach': dict({
      'absolute_magnitude': None,
      'close_approach_date': '2024-03-02',
      'estimated_diameter_max_km': None,
      'estimated_diameter_min_km': None,
      'is_potentially_hazardous': True,
      'miss_distance_km': 1000000.0,
      'name': '2024 EF',
      'neo_id': '11111',
      'orbiting_body': 'Earth',
      'relative_velocity_kph': None,
    }),
    'date_range': '2024-03-01 to 2024-03-02',
    'hazardous_count': 2,
    'near_earth_objects': list([
      dict({
        'absolute_magnitude': None,
        'close_approach_date': '2024-03-01',
        'estimated_diameter_max_km': None,
        'estimated_diameter_min_km': None,
        'is_potentially_hazardous': True,
        'miss_distance_km': 2500000.0,
        'name': '2024 AB',
        'neo_id': '12345',
        'orbiting_body': 'Earth',
        'relative_velocity_kph': None,
      }),
      dict({
        'absolute_magnitude': None,
        'close_approach_date': '2024-03-01',
        'estimated_diameter_max_km': None,
        'estimated_diameter_min_km': None,
        'is_potentially_hazardous': False,
        'miss_distance_km': 5000000.0,
        'name': '2024 CD',
        'neo_id': '67890',
        'orbiting_body': 'Earth',
        'relative_velocity_kph': None,
      }),
      dict({
        'absolute_magnitude': None,
        'close_approach_date': '2024-03-02',
        'estimated_diameter_max_km': None,
        'estimated_diameter_min_km': None,
        'is_potentially_hazardous': True,
        'miss_distance_km': 1000000.0,
        'name': '2024 EF',
        'neo_id': '11111',
        'orbiting_body': 'Earth',
        'relative_velocity_kph': None,
      }),
    ]),
    'objects_count': 3,
    'query': 'Check for hazardous asteroids this week',
    'risk_assessment': 'ELEVATED RISK: 2 potentially hazardous asteroid(s) detected in the date range. Monitor closely.',
    'risk_level': 'elevated',
    'type': 'NEO_REPORT',
  })
# ---
# name: TestNEORegressionEdgeCases.test_no_hazardous_asteroids_normal_risk
  dict({
    'closest_approach': dict({
      'absolute_magnitude': None,
      'close_approach_date': '2024-03-01',
      'estimated_diameter_max_km': None,
      'estimated_diameter_min_km': None,
      'is_potentially_hazardous': False,
      'miss_distance_km': 8000000.0,
      'name': '2024 GH',
      'neo_id': '22222',
      'orbiting_body': 'Earth',
      'relative_velocity_kph': None,
    }),
    'date_range': '2024-03-01 to 2024-03-02',
    'hazardous_count': 0,
    'near_earth_objects': list([
      dict({
        'absolute_magnitude': None,
        'close_approach_date': '2024-03-01',
        'estimated_diameter_max_km': None,
        'estimated_diameter_min_km': None,
        'is_potentially_hazardous': False,
        'miss_distance_km': 8000000.0,
        'name': '2024 GH',
        'neo_id': '22222',
        'orbiting_body': 'Earth',
        'relative_velocity_kph': None,
      }),
      dict({
        'absolute_magnitude': None,
        'close_approach_date': '2024-03-02',
        'estimated_diameter_max_km': None,
        'estimated_diameter_min_km': None,
        'is_potentially_hazardous': False,
        'miss_distance_km': 10000000.0,
        'name': '2024 IJ',
        'neo_id': '33333',
        'orbiting_body': 'Earth',
        'relative_velocity_kph': None,
      }),
    ]),
    'objects_count': 2,
    'query': 'Check for asteroids near Earth',
    'risk_assessment': 'Normal activity levels. No potentially hazardous asteroids detected in the specified date range.',
    'risk_level': 'normal',
    'type': 'NEO_REPORT',
  })
# ---
